<resources>
    <string name="app_name">Eat Cheaper</string>
    <string name="food">Food</string>
    <string name="order_now_cheaper">ORDER CHEAPER NOW!</string>
    <string name="account_settings">ACCOUNT SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="application">APPLICATION</string>
    <string name="contact">CONTACT</string>
    <string name="help">HELP</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="profile">PROFILE</string>
    <string name="info">INFO</string>
    <string name="eat_cheaper">Eat Cheaper</string>
    <string name="login">LOGIN</string>
    <string name="welcome">WELCOME</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="please_enter_your_email">Please Enter your Email</string>
    <string name="please_enter_your_password">Please Enter your Password</string>
    <string name="have_you_forgot_your_password">Forgotten Password?</string>
    <string name="register">Register New Account Now!</string>
    <string name="register_here">REGISTER HERE</string>
    <string name="enter_your_nickname">Please Enter your Nickname</string>
    <string name="enter_your_email">Please Enter your Email</string>
    <string name="please_confirm_your_password">Please Confirm your Password</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="back_to_login_screen">Back to Login Screen</string>
    <string name="submit">SUBMIT</string>
    <string name="create_a_new_password">CREATE A NEW PASSWORD</string>
    <string name="currently_logged_in_user">Currently Logged in User:</string>
    <string name="hello">Hello,</string>
    <string name="sign_in_with_google_using_firebase">Sign-In with Google Now!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Google Sign In</string>
    <string name="or_sign_in_using">Or Sign-In Using</string>
    <string name="sign_in_with_phone_number">Phone Number</string>
    <string name="please_enter_the_verification_code_sent_to_your_phone_number">Please enter the verification code sent to your phone number</string>
    <string name="Continue">continue</string>
    <string name="share_location">Share Location</string>
    <string name="or_enter_address_manually">Or enter address manually!</string>
    <string name="enter_location">Enter Location</string>
    <string name="please_share_your_location_so_we_can_find_beast_food_delivery_deals_for_you">Please share your location so we can find beast food delivery deals for you!</string>
</resources>