<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    >

    <item android:title="">

        <menu>

            <item
                android:id="@+id/nav_order_now"
                android:icon="@drawable/ic_baseline_fastfood_24"
                android:title="@string/order_now_cheaper"
                />

        </menu>

    </item>

    <item android:title="@string/profile">

        <menu>

            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/login"
                android:visible="true"
                />

            <item
                android:id="@+id/nav_account_settings"
                android:icon="@drawable/ic_baseline_account_circle_24"
                android:title="@string/account_settings"
                android:visible="false"
                />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/logout"
                android:visible="false"
                />

        </menu>

    </item>

    <item android:title="@string/info" >
        <menu>

            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_baseline_email_24"
                android:title="@string/contact"
                android:visible="true"
                />

            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_baseline_help_24"
                android:title="@string/help"
                />

        </menu>
    </item>



</menu>