<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.FragmentLogin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardMaxElevation="12dp"
        app:cardBackgroundColor="@color/white"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/main"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:textColor="@color/main"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailTil"
        >


        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/please_enter_your_email"
            android:textColorHint="@android:color/black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:layout_marginTop="120dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passTil"
        >

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_your_password"
            android:textColorHint="@android:color/black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:layout_marginTop="200dp"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_you_forgot_your_password"
        android:padding="10dp"
        android:layout_marginTop="280dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="320dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/tv_register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="380dp"
        />

    <TextView
        android:id="@+id/tv_google_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/or_sign_in_using"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="420dp"
        />


        <Button
            android:id="@+id/btn_google_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="450dp"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_icons8_google__1_"
            />
        <Button
            android:id="@+id/btn_phone_login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:text="@string/sign_in_with_phone_number"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="520dp"
            android:layout_gravity="center_horizontal"
            android:drawableLeft="@drawable/ic_baseline_local_phone_24"
            />


    </androidx.cardview.widget.CardView>

</RelativeLayout>