<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.FragmentForgottenPassword"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_password"
        android:textColor="@color/main"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailTil"
        >


        <EditText
            android:id="@+id/et_forgot_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email"
            android:textColorHint="@android:color/black"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_login_screen"
        android:padding="10dp"
        android:layout_marginTop="180dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="240dp"
        android:layout_gravity="center_horizontal"
        />

    </androidx.cardview.widget.CardView>

</LinearLayout>